# unitree_g1_sim_ws

./: .gitignore  README.md  SESSION_STATUS.md  setup.bash
scripts/: build.sh  run_sim.sh  setup_environment.sh
src/g1_description/: CMakeLists.txt  package.xml
src/g1_description/launch/: display.launch.py
src/g1_description/rviz/: g1_display.rviz
src/g1_description/urdf/: g1.urdf.xacro
src/g1_sim_bridge/: package.xml  setup.py
src/g1_sim_bridge/config/: joint_names.yaml
src/g1_sim_bridge/g1_sim_bridge/: __init__.py  balance_controller.py  joint_command_publisher.py  keyboard_teleop.py  mujoco_ros2_bridge.py  rl_keyboard_teleop.py  rl_locomotion.py
src/g1_sim_bridge/launch/: bridge.launch.py
src/g1_sim_bringup/: CMakeLists.txt  package.xml
src/g1_sim_bringup/config/: g1_sim_params.yaml
src/g1_sim_bringup/launch/: g1_balance.launch.py  g1_demo.launch.py  g1_sim.launch.py  g1_teleop.launch.py  g1_walk.launch.py
